--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2463,7 +2463,8 @@
 			<tr class="high">
 				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
-					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.<br/><br/>
+					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
+					<br/>
 					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);"></div>
 					<div id="FctCombo_Pr">Grande fonction concernée : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
 					<div id="EspeceCombo_Pr">Espèce concernée : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
@@ -2493,7 +2494,7 @@
 			<tr class="high">
 				<td style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche avancée :</h2>
-					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.<br/><br/>
+					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<br/>Inclure : 
 					<div id="FctCombo_Pl">Grande fonction concernée : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
@@ -2523,6 +2524,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
