--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -682,7 +682,7 @@
 				{
 					let TmpResultRow = SQLRequestResultObj[i];
 					
-					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewProduct(" + TmpResultRow[0] +",-1);\">Elt " + TmpResultRow[0] + " : " + TmpResultRow[1] + "</span><br/>";
+					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewProduct(" + TmpResultRow[0] +",-1);\">" + TmpResultRow[1] + "</span><br/>";
 				}
 			}
 			// hidding search form
@@ -1601,7 +1601,7 @@
 			
 			// Pre build result
 			let ProductInfoTxt = "";
-			if(PlanteId == -1) ProductInfoTxt += "<input type=\"button\" value=\"Retour à la recherche\" onclick=\"GoBackToSearch();\" /><br/>";
+			if(PlanteId == -1) ProductInfoTxt += "<input type=\"button\" value=\"Retour à la recherche\" onclick=\"GoBackToSearch('Pr');\" /><br/>";
 			else
 			{
 				ProductInfoTxt += "<input type=\"button\" value=\"Retour à la plante\" onclick=\"DoViewPlante(" + PlanteId + ", -1);\" /><br/>";
@@ -2527,6 +2527,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
