--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2482,7 +2482,7 @@
 	<div id="ListePlanteForm" style="visibility: hidden; display: none;">
 		<table class="full">
 			<tr class="high">
-				<td rowspan=3><b>Liste des plantes renseignées :</b><br/><i>(Cliquer pour en voir la monographie)</i><br/><div id="PlanteList">Empty List</div></td>
+				<td rowspan=4><b>Liste des plantes renseignées :</b><br/><i>(Cliquer pour en voir la monographie)</i><br/><div id="PlanteList">Empty List</div></td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
 					<input id="PlanteNameLike" size="64" type="text" />
@@ -2495,6 +2495,10 @@
 				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par produits" onclick="DoSearchProduct();" /></td>
 			</tr>
 			<tr class="high">
+				<td></td>
+			</tr>
+			<tr class="high">
+				<td></td>
 				<td></td>
 			</tr>
 			<tr class="high">
@@ -2527,6 +2531,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
