--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2448,7 +2448,7 @@
 		<span id="DatabasePath">No DB</span>
 		<table class="full">
 			<tr class="high">
-				<td rowspan=3><b>Liste des produits renseignés :</b><br/><i>(Cliquer pour en voir les détails)</i><br/><div id="ProductList">Empty List</div></td>
+				<td rowspan=4><b>Liste des produits renseignés :</b><br/><i>(Cliquer pour en voir les détails)</i><br/><div id="ProductList">Empty List</div></td>
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
 					<input id="ProductNameLike" size="64" type="text" />
@@ -2461,6 +2461,10 @@
 				<td class="casedroite" style="width: 10%; height: 20px; border:3px; border-style: ridge; border-color: #B119AA; border-radius: 10px; padding: 15px;"><input type="button" value="Rechercher par plantes" onclick="DoListPlantes();" /></td>
 			</tr>
 			<tr class="high">
+				<td></td>
+			</tr>
+			<tr class="high">
+				<td><br/><br/></td>
 				<td></td>
 			</tr>
 			<tr class="high">
@@ -2531,6 +2535,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
