--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
 				<td><button onclick="OpenInNewTab('https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link')" type="button">Accès Mode d'emploi</button></td>
 			</tr>
 			<tr colspan=3>
-				<td><button onclick="location.href='https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link'" type="button">Liens externes</button></td>
+				<td><button onclick="location.href='LiensExt.html'" type="button">Liens externes</button></td>
 			</tr>
 		</table>
 	</div>
 </body>
 </html>
+
 
 
 
