--- a/index.html
+++ b/index.html
@@ -101,47 +101,10 @@
 				<td><button onclick="OpenInNewTab('https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link')" type="button">Accès thèse</button></td>
 				<td><button onclick="OpenInNewTab('https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link')" type="button">Accès Mode d'emploi</button></td>
 			</tr>
-			<tr colspan=3>
-				<td><button onclick="location.href='LiensExt.html'" type="button">Liens externes</button></td>
+			<tr>
+				<td colspan=3><button onclick="location.href='LiensExt.html'" type="button">Liens externes</button></td>
 			</tr>
 		</table>
 	</div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
