--- a/index.html
+++ b/index.html
@@ -102,9 +102,14 @@
 				<td><button onclick="OpenInNewTab('https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link')" type="button">Accès Mode d'emploi</button></td>
 			</tr>
 			<tr>
-				<td colspan=3><button onclick="location.href='LiensExt.html'" type="button">Liens externes</button></td>
+				<td colspan=3>
+					<br/>
+					<br/>
+					<br/><button onclick="location.href='LiensExt.html'" type="button">Liens externes</button>
+				</td>
 			</tr>
 		</table>
 	</div>
 </body>
 </html>
+
