--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 		<br/>
 		<br/><table align=center width=50%>
 			<tr>
-				<td><button onclick="OpenInNewTab('https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link')" type="button">Accès mode local</button></td>
-				<td><button onclick="OpenInNewTab('https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link')" type="button">Accès thèse</button></td>
-				<td><button onclick="OpenInNewTab('https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link')" type="button">Accès Mode d'emploi</button></td>
+				<td width=33%><button onclick="OpenInNewTab('https://drive.google.com/drive/folders/1cEjrPO3Fqio0Vqe9bDSBnmaV66o9UAdq?usp=drive_link')" type="button">Accès mode local</button></td>
+				<td width=33%><button onclick="OpenInNewTab('https://drive.google.com/file/d/1MN-jsTDgolW7-eT1xfY0xK5pEPJdxpF_/view?usp=drive_link')" type="button">Accès thèse</button></td>
+				<td width=33%><button onclick="OpenInNewTab('https://docs.google.com/document/d/19UThGQnSDQQSS7GLXsTRykIVcQ_j240DmRcTFQNxdeM/edit?usp=drive_link')" type="button">Accès Mode d'emploi</button></td>
 			</tr>
 			<tr>
 				<td colspan=3>
@@ -112,4 +112,3 @@
 	</div>
 </body>
 </html>
-
