--- a/LiensExt.html
+++ b/LiensExt.html
@@ -44,8 +44,8 @@
 		<br/>
     <table>
       <tr>
-        <td><img src="Images/WikiPhyto.png"></td>
-        <td><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales'>WikiPhyto</a></td>
+        <td><img src="Images/WikiPhyto.png" heigth=100px></td>
+        <td><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
       </tr>
     </table>
 	</div>
