--- a/LiensExt.html
+++ b/LiensExt.html
@@ -18,6 +18,12 @@
 			margin-bottom: 35px;
 			margin-right: 35px;
 		}
+		table {
+		}
+		td {
+		}
+		.link {
+		}
 	</style>
 	<script>
 		function OpenInNewTab(Url)
@@ -44,8 +50,11 @@
 		<br/>
     <table>
       <tr>
-        <td><img src="Images/WikiPhyto.png" style="height:75px;"></td>
-        <td><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+        <td class="link"><img src="Images/WikiPhyto.png" style="height:75px;"></td>
+        <td class="link"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+		<td>&nbsp;</td>
+        <td class="link"><img src="Images/WikiPhyto.png" style="height:75px;"></td>
+        <td class="link"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
       </tr>
     </table>
 	</div>
