--- a/LiensExt.html
+++ b/LiensExt.html
@@ -19,10 +19,12 @@
 			margin-right: 35px;
 		}
 		table {
+			text-align: center;
 		}
 		td {
 		}
 		.link {
+			border: 5px double;
 		}
 	</style>
 	<script>
