--- a/LiensExt.html
+++ b/LiensExt.html
@@ -19,7 +19,14 @@
 			margin-right: 35px;
 		}
 		table {
+		}
+		.ExtLink {
 			text-align: center;
+			margin-left: auto;
+		    margin-right: auto;
+			border-spacing: 0;
+			border-collapse: collapse;
+			width: 75%;
 		}
 		td {
 		}
@@ -50,7 +57,7 @@
 		<img height= "100" src="Images/Icone.png">
 		<br/>Vous trouverez ci-dessous une liste de liens vous menant vers d'autres sites contenant des informations sur les plantes.
 		<br/>
-    <table>
+    <table class="ExtLink">
       <tr>
         <td class="link"><img src="Images/WikiPhyto.png" style="height:75px;"></td>
         <td class="link"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
