--- a/LiensExt.html
+++ b/LiensExt.html
@@ -32,6 +32,10 @@
 		}
 		.link {
 			border: 5px double;
+			width: 80px;
+		}
+		.link2 {
+			border: 5px double;
 		}
 	</style>
 	<script>
@@ -57,13 +61,15 @@
 		<img height= "100" src="Images/Icone.png">
 		<br/>Vous trouverez ci-dessous une liste de liens vous menant vers d'autres sites contenant des informations sur les plantes.
 		<br/>
+		<br/>
+		<br/>
     <table class="ExtLink">
       <tr>
-        <td class="link"><img src="Images/WikiPhyto.png" style="height:75px;"></td>
-        <td class="link"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+        <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
+        <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/WikiPhyto.png" style="height:75px;"></td>
-        <td class="link"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+        <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
+        <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
       </tr>
     </table>
 	</div>
