--- a/LiensExt.html
+++ b/LiensExt.html
@@ -32,10 +32,12 @@
 		}
 		.link {
 			border: 5px double;
+			border-right: none;
 			width: 80px;
 		}
 		.link2 {
 			border: 5px double;
+			border-left: none;
 		}
 	</style>
 	<script>
