--- a/LiensExt.html
+++ b/LiensExt.html
@@ -39,6 +39,13 @@
 			border: 5px double;
 			border-left: none;
 		}
+		a {
+			text-decoration: none;
+		}
+		a:hover {
+			text-decoration: underline;
+			text-color: red;
+		}
 	</style>
 	<script>
 		function OpenInNewTab(Url)
