--- a/LiensExt.html
+++ b/LiensExt.html
@@ -39,12 +39,21 @@
 			border: 5px double;
 			border-left: none;
 		}
-		a {
+		a:link {
 			text-decoration: none;
+			color: black;
 		}
 		a:hover {
 			text-decoration: underline;
-			text-color: red;
+			color: red;
+		}
+		a:visited {
+			text-decoration: none;
+			color: black;
+		}
+		a:active {
+			text-decoration: underline;
+			color: red;
 		}
 	</style>
 	<script>
