--- a/LiensExt.html
+++ b/LiensExt.html
@@ -86,8 +86,10 @@
         <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
         <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
-        <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+        <td class="link"><img src="Images/CliniPharmCliniTox.jpg" style="width:75px;"></td>
+        <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
+			<br/>Base de données suisse (en allemand)
+		</td>
       </tr>
     </table>
 	</div>
