--- a/LiensExt.html
+++ b/LiensExt.html
@@ -38,6 +38,7 @@
 		.link2 {
 			border: 5px double;
 			border-left: none;
+			width: 35%;
 		}
 		a:link {
 			text-decoration: none;
@@ -85,10 +86,21 @@
       <tr>
         <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
         <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+			<br/>Disponible en Français
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/CliniPharmCliniTox.jpg" style="width:75px;"></td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
-			<br/>Base de données suisse (en allemand)
+			<br/>Disponible en Allemand
+		</td>
+      </tr>
+      <tr>
+        <td class="link"><img src="Images/Kooperation Phytopharmaka.png" style="width:75px;"></td>
+        <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a></td>
+			<br/>Disponible en Anglais et en Allemand
+		<td>&nbsp;</td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
+        <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
+			<br/>Disponible en Allemand
 		</td>
       </tr>
     </table>
