--- a/LiensExt.html
+++ b/LiensExt.html
@@ -38,7 +38,7 @@
 		.link2 {
 			border: 5px double;
 			border-left: none;
-			width: 35%;
+			width: 40%;
 		}
 		a:link {
 			text-decoration: none;
@@ -85,8 +85,9 @@
     <table class="ExtLink">
       <tr>
         <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
-        <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a></td>
+        <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Français
+		</td>
 		<td>&nbsp;</td>
         <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
@@ -95,8 +96,9 @@
       </tr>
       <tr>
         <td class="link"><img src="Images/Kooperation Phytopharmaka.png" style="width:75px;"></td>
-        <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a></td>
+        <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Anglais et en Allemand
+		</td>
 		<td>&nbsp;</td>
         <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
