--- a/LiensExt.html
+++ b/LiensExt.html
@@ -28,17 +28,22 @@
 			border-collapse: collapse;
 			width: 75%;
 		}
+		tr {
+		}
+		.DblLink {
+			height: 85px;
+		}
 		td {
 		}
 		.link {
 			border: 5px double;
 			border-right: none;
-			width: 80px;
+			width: 10%;
 		}
 		.link2 {
 			border: 5px double;
 			border-left: none;
-			width: 40%;
+			width: 35%;
 		}
 		a:link {
 			text-decoration: none;
@@ -83,24 +88,24 @@
 		<br/>
 		<br/>
     <table class="ExtLink">
-      <tr>
-        <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
+      <tr class="DblLink">
+        <td class="link"><img src="Images/WikiPhyto.png"></td>
         <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Français
 		</td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
 			<br/>Disponible en Allemand
 		</td>
       </tr>
-      <tr>
-        <td class="link"><img src="Images/Kooperation Phytopharmaka.png" style="width:75px;"></td>
+      <tr class="DblLink">
+        <td class="link"><img src="Images/Kooperation Phytopharmaka.png"></td>
         <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Anglais et en Allemand
 		</td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
 			<br/>Disponible en Allemand
 		</td>
