--- a/LiensExt.html
+++ b/LiensExt.html
@@ -89,23 +89,23 @@
 		<br/>
     <table class="ExtLink">
       <tr class="DblLink">
-        <td class="link"><img src="Images/WikiPhyto.png" size="width: 75px"></td>
+        <td class="link"><img src="Images/WikiPhyto.png" style="width:75px;"></td>
         <td class="link2"><a href='https://www.wikiphyto.org/wiki/Cat%C3%A9gorie:Plantes_m%C3%A9dicinales' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Français
 		</td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" size="width: 75px"></td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
 			<br/>Disponible en Allemand
 		</td>
       </tr>
       <tr class="DblLink">
-        <td class="link"><img src="Images/Kooperation Phytopharmaka.png" size="width: 75px"></td>
+        <td class="link"><img src="Images/Kooperation Phytopharmaka.png" style="width:75px;"></td>
         <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a>
 			<br/>Disponible en Anglais et en Allemand
 		</td>
 		<td>&nbsp;</td>
-        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" size="width: 75px"></td>
+        <td class="link"><img src="Images/CliniPharm CliniTox.jpg" style="width:75px;"></td>
         <td class="link2"><a href='https://www.vetpharm.uzh.ch/ArzneidrogenSuche/ArzneidrogenSuche.html' target='_blank'>CliniPharm CliniTox</a>
 			<br/>Disponible en Allemand
 		</td>
