--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 			border-bottom-left-radius: 10px;
 			border-bottom-right-radius: 10px;
 		}
+		button {
+			color: red;
+		}
 	</style>
 	<script>
 		function OpenInNewTab(Url)
@@ -111,4 +114,5 @@
 	</div>
 </body>
 </html>
+
 
