--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			border-bottom-right-radius: 10px;
 		}
 		button {
-			color: red;
+			background-color: olive;
+			color: white;
 		}
 	</style>
 	<script>
@@ -114,5 +115,6 @@
 	</div>
 </body>
 </html>
+
 
 
