--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 			border-bottom-right-radius: 10px;
 		}
 		button {
+ 			border: 0;
 			background-color: olive;
 			color: white;
+			border-radius: 10px;
 		}
 	</style>
 	<script>
@@ -115,6 +117,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
