--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
  			border: 0;
 			background-color: olive;
 			color: white;
-			border-radius: 10px;
+			border-radius: 5px;
+		}
+		button:hover {
+			background-color: dark olive;
 		}
 	</style>
 	<script>
@@ -117,6 +120,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
