--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 		}
 		button {
  			border: 0;
-			background-color: olive;
+			background-color: Olive;
 			color: white;
 			border-radius: 5px;
 		}
 		button:hover {
-			background-color: dark olive;
+			background-color: OliveDrab;
 		}
 	</style>
 	<script>
@@ -120,6 +120,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
