--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
 		}
 		button {
  			border: 0;
-			background-color: Olive;
+  			line-height: 2.5;
+  			padding: 0 20px;
+			background-color: Mint;
 			color: white;
 			border-radius: 5px;
 		}
 		button:hover {
-			background-color: OliveDrab;
+			background-color: Emerald;
 		}
 	</style>
 	<script>
@@ -120,6 +122,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
