--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
  			border: 0;
   			line-height: 2.5;
   			padding: 0 20px;
-			background-color: Mint;
+			background-color: #3EB489;
 			color: white;
 			border-radius: 5px;
 		}
 		button:hover {
-			background-color: Emerald;
+			background-color: #50C878;
 		}
 	</style>
 	<script>
@@ -122,6 +122,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
