--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			background-color: #3EB489;
 			color: white;
 			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
@@ -128,6 +129,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
