--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 		.Access {
  			border: 0;
   			line-height: 2;
-  			padding: 0 20px;
+  			padding: 0 15px;
 			background-color: #E0B0FF;
-			color: white;
+			color: black;
 			border-radius: 5px;
-			text-shadow: 1px 1px 1px black;
+			text-shadow: 1px 1px 1px white;
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
@@ -86,16 +86,16 @@
  			border: 0;
   			line-height: 2;
   			padding: 0 20px;
-			background-color: #FFF8E7;
-			color: white;
+			background-color: #FEF250;
+			color: black;
 			border-radius: 5px;
-			text-shadow: 1px 1px 1px black;
+			text-shadow: 1px 1px 1px white;
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		.Link:hover {
-			background-color: #FFF0F5;
+			background-color: #F5E216;
 		}
 	</style>
 	<script>
@@ -159,6 +159,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
