--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -126,6 +126,24 @@
 		.high {
 			vertical-align: top
 		}
+		
+		button {
+		}
+		.Start {
+ 			border: 0;
+  			line-height: 2.5;
+  			padding: 0 20px;
+			background-color: #3EB489;
+			color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		.Start:hover {
+			background-color: #006A4E;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -2535,6 +2553,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
