--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2449,7 +2449,8 @@
 		<br/>
 		<br/>Sélectionner la base de donnée "PlanteVet.db" :
 		<br/>
-		<br/><input id="DatabasePathBtn" type="file" />
+		<br/><input id="DatabasePathBtn" type="file" class="Import"/>
+		<br/>
 		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" class="Import" />
 		<br/>
 		<br/>Les informations sont amenées à évoluer avec le temps.
@@ -2553,6 +2554,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
