--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -144,13 +144,19 @@
 		.Import:hover {
 			background-color: #006A4E;
 		}
+		
 		input::file-selector-button {
-			font-weight: bold;			
+ 			border: 0;
+  			line-height: 2.5;
+			font-weight: bold;
+  			padding: 0 10px;
 			background-color: #3EB489;
 			color: white;
-			padding: 20px;
-			border: none;
 			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 	</style>
 	
@@ -2562,6 +2568,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
