--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -29,6 +29,37 @@
 			margin-top: 0;
 			margin-bottom: 0;
 		}
+		
+		button {
+		}
+		.Import {
+ 			border: 0;
+  			line-height: 2.5;
+  			padding: 0 20px;
+			background-color: #3EB489;
+			color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		.Import:hover {
+			background-color: #006A4E;
+		}
+		
+		input::file-selector-button {
+ 			border: 0;
+  			line-height: 2;
+  			padding: 0 10px;
+			background-color: #3EB489;
+			color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -7600,3 +7631,4 @@
 	
 </body>
 </html>
+
