--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7588,7 +7588,7 @@
 		<br/>Sélectionner la base de donnée "PlanteVet.db" :
 		<br/>
 		<br/><input id="DatabasePathBtn" type="file" />
-		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" />
+		<br/><input id="DatabaseImportBtn" type="button" value="Importer" onclick="DoImportDatabase();" class="Import" />
 		<br/>	
 		<br/>Les informations sont amenées à évoluer avec le temps.
 		<br/>
@@ -7631,4 +7631,5 @@
 	
 </body>
 </html>
+
 
