--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -81,21 +81,6 @@
  			border: 0;
   			line-height: 2;
   			padding: 0 10px;
-			background-color: #3EB489;
-			color: white;
-			border-radius: 5px;
-			text-shadow: 1px 1px 1px black;
- 			box-shadow: 
-				inset 2px 2px 3px rgb(255 255 255 / 60%),
-				inset -2px -2px 3px rgb(0 0 0 / 60%);
-		}
-		.Tox:hover {
-			background-color: #006A4E;
-		}
-		.Save {
- 			border: 0;
-  			line-height: 2.5;
-  			padding: 0 20px;
 			background-color: #C21E56;
 			color: white;
 			border-radius: 5px;
@@ -104,8 +89,26 @@
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
-		.Save:hover {
+		.Tox:hover {
 			background-color: #DC143C;
+		}
+		.Save {
+ 			border: 0;
+  			line-height: 2.5;
+  			padding: 0 20px;
+			background-color: #3EB489;
+			color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px black;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		.Save:hover {
+			background-color: #006A4E;
+		}
+		.Save:disabled {
+			background-color: #7C9D8E;
 		}
 		.Import {
  			border: 0;
@@ -7679,19 +7682,30 @@
 	<div id="TableChoiceForm" style="visibility: hidden;">
 		<span id="DatabasePath">No DB</span><br/>
 		<br/><input type="button" value="Edit PRODUIT" id="EditPdtBtn" onclick="DoEditProductTable();" class="Product" />
+		<br/>
 		<br/><input type="button" value="Edit LABORATOIRE" onclick="DoEditLaboTable();" class="Product" />
+		<br/>
 		<br/><input type="button" value="Edit GALENIQUE" onclick="DoEditGaleniqueTable();" class="Product" />
+		<br/>
 		<br/><input type="button" value="Edit CATEGORIE" onclick="DoEditCategorieTable();" class="Product" />
 		<br/>
+		<br/>
 		<br/><input type="button" value="Edit PLANTE" onclick="DoEditPlanteTable();" class="Plant" />
+		<br/>
 		<br/><input type="button" value="Edit PARTIE UTILISEE" onclick="DoEditUsePartTable();" class="Plant" />
 		<br/>
+		<br/>
 		<br/><input type="button" value="Edit GRANDES FONCTIONS" onclick="DoEditFctsTable();" class="Fct" />
+		<br/>
 		<br/><input type="button" value="Edit UTILISATION" onclick="DoEditUsecaseTable();" class="Fct" />
 		<br/>
+		<br/>
 		<br/><input type="button" value="Edit EFFET SECONDAIRE" onclick="DoEditEffet2Table();" class="Tox" />
+		<br/>
 		<br/><input type="button" value="Edit TOXICITE" onclick="DoEditToxiciteTable();" class="Tox" />
+		<br/>
 		<br/><input type="button" value="Edit CONTRE-INDICATION" onclick="DoEditCtrIndicTable();" class="Tox" />
+		<br/>
 		<br/>
 		<br/><input type="button" value="SAVE DATABASE" onclick="DoExportDatabase();" id="SaveDBBtn" disabled="true" class="Save" />
 		<br/>
@@ -7709,6 +7723,7 @@
 	
 </body>
 </html>
+
 
 
 
