--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -497,6 +497,7 @@
 				// activate edit
 				//document.getElementById("DatabasePath").innerHTML = "Working with database : " + document.URL;
 				document.getElementById("DatabasePath").innerHTML = "Working with database : " + ListFilePathObj[0].name;
+				document.getElementById("DatabasePath").style.display = 'None';
 				document.getElementById("TableChoiceForm").style.visibility = 'visible';
 				// enable/disable btn as needed
 				if(IsLaboTblEmpty()) document.getElementById("EditPdtBtn").disabled = true;
@@ -7723,6 +7724,7 @@
 	
 </body>
 </html>
+
 
 
 
