--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -498,6 +498,7 @@
 				//document.getElementById("DatabasePath").innerHTML = "Working with database : " + document.URL;
 				document.getElementById("DatabasePath").innerHTML = "Working with database : " + ListFilePathObj[0].name;
 				document.getElementById("DatabasePath").style.display = 'None';
+				document.getElementById("DatabasePath").style.visibility = 'Hidden';
 				document.getElementById("TableChoiceForm").style.visibility = 'visible';
 				// enable/disable btn as needed
 				if(IsLaboTblEmpty()) document.getElementById("EditPdtBtn").disabled = true;
@@ -7724,6 +7725,7 @@
 	
 </body>
 </html>
+
 
 
 
