--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7682,8 +7682,8 @@
 
 	<!-- Select table to edit -->
 	<div id="TableChoiceForm" style="visibility: hidden;">
-		<span id="DatabasePath">No DB</span><br/>
-		<br/><input type="button" value="Edit PRODUIT" id="EditPdtBtn" onclick="DoEditProductTable();" class="Product" />
+		<span id="DatabasePath">No DB</span>
+		<input type="button" value="Edit PRODUIT" id="EditPdtBtn" onclick="DoEditProductTable();" class="Product" />
 		<br/>
 		<br/><input type="button" value="Edit LABORATOIRE" onclick="DoEditLaboTable();" class="Product" />
 		<br/>
@@ -7725,6 +7725,7 @@
 	
 </body>
 </html>
+
 
 
 
