--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -43,6 +43,7 @@
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+			margin-bottom: 20px;
 		}
 		.Product:hover {
 			background-color: #3090C7;
@@ -58,6 +59,7 @@
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+			margin-bottom: 20px;
 		}
 		.Plant:hover {
 			background-color: #B93B8F;
@@ -73,6 +75,7 @@
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+			margin-bottom: 20px;
 		}
 		.Fct:hover {
 			background-color: #E3319D;
@@ -88,6 +91,7 @@
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+			margin-bottom: 20px;
 		}
 		.Tox:hover {
 			background-color: #DC143C;
@@ -7718,6 +7722,7 @@
 	
 </body>
 </html>
+
 
 
 
