--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -96,7 +96,7 @@
 		.Tox:hover {
 			background-color: #DC143C;
 		}
-		.Save {
+		.Save:enabled {
  			border: 0;
   			line-height: 2.5;
   			padding: 0 20px;
@@ -112,7 +112,12 @@
 			background-color: #006A4E;
 		}
 		.Save:disabled {
+ 			border: 0;
+  			line-height: 2.5;
+  			padding: 0 20px;
 			background-color: #7C9D8E;
+			color: white;
+			border-radius: 5px;
 		}
 		.Import {
  			border: 0;
@@ -7722,6 +7727,7 @@
 	
 </body>
 </html>
+
 
 
 
