--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -170,7 +170,7 @@
 												"CREATE TABLE PLANTE(Id integer primary key, Name text, Photo blob, Latin text, Famille text, Botanique blob, Molecules blob, PDyn blob, P1 text, P2 text, P3 text, PCin blob, Gestation blob, Surdosage blob, Sources blob, Interac blob, MAJ blob, Rchr int, Clin int, Reg int, RegEQ int, Dop int, Poso blob)",
 												"CREATE TABLE USEPART(Id integer primary key, Name text)",
 												"CREATE TABLE FCTS(Id integer primary key, Name text)",
-												"CREATE TABLE USECASE(Id integer primary key, Name text, Fct integer not null, foreign key(Fct) references FCTS(Id))",
+												"CREATE TABLE USECASE(Id integer primary key, Name text, Fct integer not null, Syndrome bool, foreign key(Fct) references FCTS(Id))",
 												"CREATE TABLE EFFET2(Id integer primary key, Name text)",
 												"CREATE TABLE TOXICITE(Id integer primary key, Name text)",
 												"CREATE TABLE CTRINDIC(Id integer primary key, Name text)",
@@ -2567,6 +2567,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
