--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -491,6 +491,57 @@
 			return;
 		}
 		
+		// build Effet2 combo
+		function BuildSyndromeInputCombo(PrOrPl,DfltSydnromeId)
+		{
+			let SyndromeInputComboTxt = "Syndrome : ";
+		
+			// pre build combo
+			SyndromeInputComboTxt += "<select id=\"SyndromeInputCombo_" + PrOrPl + "\" style=\"width: 200px;\">";
+			let SyndTrue = True;
+			// fetch list fct
+			console.log("Doing combo list Syndrome SQL request ...");
+			let SyndromeSQLRequestResultObj = [];
+			try {
+				SyndromeSQLRequestResultObj = globalThis.WorkingDB.exec({
+					sql: "select Id,Name from USECASE where Syndrome = $a order by Name ASC",
+					rowMode: 'array',
+					bind: {$a: SyndTrue},
+				});
+				console.log("End of combo list Syndrome SQL request.");
+			} catch(ErrorObj) {
+				console.log("Echec combo list Syndrome SQL request");
+			};			
+			let NbResultRow = SyndromeSQLRequestResultObj.length;
+			console.log("Combo list Syndrome : " + NbResultRow + " elts");
+			if(NbResultRow == 0)
+			{
+				SyndromeInputComboTxt += "<option value=\"0\">*** NO SYNDROME ***</option>";
+			}
+			else
+			{	
+				SyndromeInputComboTxt += "<option value=\"-1\">Aucun</option>";
+				
+				for(let i = 0; i < NbResultRow; i++)
+				{
+					// fetch info
+					let TmpResultRow = SyndromeSQLRequestResultObj[i];
+					let SyndromeId = TmpResultRow[0];
+					let SyndromeNameTxt = TmpResultRow[1];
+					if(SyndromeNameTxt == null) SyndromeNameTxt = "UNKNOWN FCT ID " + SyndromeId;
+					SyndromeNameTxt = DoSanitizeNameTxt(SyndromeNameTxt);
+					// add to combo
+					SyndromeInputComboTxt += "<option value=\"" + SyndromeId + "\"";
+					if(Syndrome2Id == DfltSyndromeId) SyndromeInputComboTxt += " selected ";
+					SyndromeInputComboTxt += ">" + SyndromeNameTxt + "</option>";
+				}
+			}
+			// finalize
+			SyndromeInputComboTxt += "</select>";
+			document.getElementById("SyndromeCombo_" + PrOrPl).innerHTML = SyndromeInputComboTxt;
+			return;
+		}
+		
 		//launch search by product
 		function DoSearchProduct()
 		{
@@ -2505,8 +2556,8 @@
 					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<div id="LaboCombo_Pr">Laboratoire : <input type="button" id="LaboInputCombo_Pr" value="Choisir" onclick="BuildLaboInputCombo('Pr', 0);"></div>
-					<div id="FctCombo_Pr">Grande fonction concernée : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
-					<div id="EspeceCombo_Pr">Espèce concernée : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
+					<div id="FctCombo_Pr">Grande fonction : <input type="button" id="FctInputCombo_Pr" value="Choisir" onclick="BuildFctInputCombo('Pr', 0);"></div>
+					<div id="EspeceCombo_Pr">Espèce : <input type="button" id="EspeceInputCombo_Pr" value="Choisir" onclick="BuildEspeceInputCombo('Pr');"></div>
 					<br/>
 					<input type="button" value="Rechercher" onclick="DoSearchProductByInfos();" /><br/></td>
 				<td></td>
@@ -2543,8 +2594,9 @@
 					<br/>Notez que la recherche s'effectue en utilisant l'opérateur <b>et</b> entre les différents champs séléctionnés.
 					<br/>
 					<br/>Inclure : 
-					<div id="FctCombo_Pl">Grande fonction concernée : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
-					<div id="EspeceCombo_Pl">Espèce concernée : <input type="button" id="EspeceInputCombo_Pl" value="Choisir" onclick="BuildEspeceInputCombo('Pl');"></div>
+					<div id="FctCombo_Pl">Grande fonction : <input type="button" id="FctInputCombo_Pl" value="Choisir" onclick="BuildFctInputCombo('Pl', 0);"></div>
+					<div id="EspeceCombo_Pl">Espèce : <input type="button" id="EspeceInputCombo_Pl" value="Choisir" onclick="BuildEspeceInputCombo('Pl');"></div>
+					<div id="SyndromeCombo_Pl">Syndrome : <input type="button" id="SyndromeInputCombo_Pl" value="Choisir" onclick="BuildSyndromeInputCombo('Pl');"></div>
 					<br/>
 					<br/>Exclure :
 					<div id="CtrIndicCombo_Pl">Contre-indication : <input type="button" id="CtrIndicInputCombo_Pl" value="Choisir" onclick="BuildCtrIndicInputCombo('Pl', 0);"></div>
@@ -2567,26 +2619,3 @@
 	</div>	
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
