--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -498,7 +498,7 @@
 		
 			// pre build combo
 			SyndromeInputComboTxt += "<select id=\"SyndromeInputCombo_" + PrOrPl + "\" style=\"width: 200px;\">";
-			let SyndTrue = True;
+			let SyndTrue = true;
 			// fetch list fct
 			console.log("Doing combo list Syndrome SQL request ...");
 			let SyndromeSQLRequestResultObj = [];
@@ -2619,3 +2619,4 @@
 	</div>	
 </body>
 </html>
+
