--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -532,7 +532,7 @@
 					SyndromeNameTxt = DoSanitizeNameTxt(SyndromeNameTxt);
 					// add to combo
 					SyndromeInputComboTxt += "<option value=\"" + SyndromeId + "\"";
-					if(Syndrome2Id == DfltSyndromeId) SyndromeInputComboTxt += " selected ";
+					if(SyndromeId == DfltSyndromeId) SyndromeInputComboTxt += " selected ";
 					SyndromeInputComboTxt += ">" + SyndromeNameTxt + "</option>";
 				}
 			}
@@ -2619,4 +2619,5 @@
 	</div>	
 </body>
 </html>
+
 
