--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -520,7 +520,7 @@
 			}
 			else
 			{	
-				SyndromeInputComboTxt += "<option value=\"-1\">Aucun</option>";
+				SyndromeInputComboTxt += "<option value=\"-1\">Tous</option>";
 				
 				for(let i = 0; i < NbResultRow; i++)
 				{
@@ -2619,6 +2619,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
